deployments/apps/forge_patient_frontend/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forge-patient-frontend-develop
